--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,12 +28,10 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: 1.88.0
           components: llvm-tools-preview, rustfmt, clippy
-          default: true
-          override: true
 
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
