--- a/.github/workflows/test_supabase_wrappers.yml
+++ b/.github/workflows/test_supabase_wrappers.yml
@@ -25,11 +25,9 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v6
 
-      - uses: actions-rs/toolchain@v1
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: 1.88.0
-          default: true
-          override: true
           components: rustfmt, clippy
 
       - run: |
