--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -2,9 +2,19 @@ name: Code Coverage
 
 on:
   pull_request:
+    paths:
+      - 'wrappers/**'
+      - 'supabase-wrappers/**'
+      - 'supabase-wrappers-macros/**'
+      - '.github/workflows/coverage.yml'
   push:
     branches:
       - main
+    paths:
+      - 'wrappers/**'
+      - 'supabase-wrappers/**'
+      - 'supabase-wrappers-macros/**'
+      - '.github/workflows/coverage.yml'
 
 permissions:
   contents: write
@@ -18,12 +28,10 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Install Rust toolchain
-        uses: actions-rs/toolchain@v1
+        uses: actions-rust-lang/setup-rust-toolchain@v1
         with:
           toolchain: 1.88.0
           components: llvm-tools-preview, rustfmt, clippy
-          default: true
-          override: true
 
       - name: Install cargo-llvm-cov
         uses: taiki-e/install-action@cargo-llvm-cov
