--- a/.github/workflows/test_supabase_wrappers.yml
+++ b/.github/workflows/test_supabase_wrappers.yml
@@ -1,9 +1,17 @@
 name: Test Wrappers
 on:
   pull_request:
+    paths:
+      - 'supabase-wrappers/**'
+      - 'supabase-wrappers-macros/**'
+      - '.github/workflows/test_supabase_wrappers.yml'
   push:
     branches:
       - main
+    paths:
+      - 'supabase-wrappers/**'
+      - 'supabase-wrappers-macros/**'
+      - '.github/workflows/test_supabase_wrappers.yml'
 
 permissions:
   contents: read
@@ -14,37 +22,35 @@ jobs:
     runs-on: blacksmith-4vcpu-ubuntu-2404
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v6
+      - name: Checkout code
+        uses: actions/checkout@v6
 
-    - uses: actions-rs/toolchain@v1
-      with:
-        toolchain: 1.88.0
-        default: true
-        override: true
-        components: rustfmt, clippy
+      - uses: actions-rust-lang/setup-rust-toolchain@v1
+        with:
+          toolchain: 1.88.0
+          components: rustfmt, clippy
 
-    - run: |
-        sudo apt remove -y postgres*
-        sudo apt -y install curl ca-certificates build-essential pkg-config libssl-dev
-        sudo install -d /usr/share/postgresql-common/pgdg
-        sudo curl -o /usr/share/postgresql-common/pgdg/apt.postgresql.org.asc --fail https://www.postgresql.org/media/keys/ACCC4CF8.asc
-        . /etc/os-release
-        sudo sh -c "echo 'deb [signed-by=/usr/share/postgresql-common/pgdg/apt.postgresql.org.asc] https://apt.postgresql.org/pub/repos/apt $VERSION_CODENAME-pgdg main' > /etc/apt/sources.list.d/pgdg.list"
-        sudo apt update -y -qq --fix-missing
-        sudo apt -y install postgresql-client-15 postgresql-15 postgresql-server-dev-15
-        sudo apt -y autoremove && sudo apt -y clean
-        sudo chmod a+rwx `/usr/lib/postgresql/15/bin/pg_config --pkglibdir` `/usr/lib/postgresql/15/bin/pg_config --sharedir`/extension /var/run/postgresql/
+      - run: |
+          sudo apt remove -y postgres*
+          sudo apt -y install curl ca-certificates build-essential pkg-config libssl-dev
+          sudo install -d /usr/share/postgresql-common/pgdg
+          sudo curl -o /usr/share/postgresql-common/pgdg/apt.postgresql.org.asc --fail https://www.postgresql.org/media/keys/ACCC4CF8.asc
+          . /etc/os-release
+          sudo sh -c "echo 'deb [signed-by=/usr/share/postgresql-common/pgdg/apt.postgresql.org.asc] https://apt.postgresql.org/pub/repos/apt $VERSION_CODENAME-pgdg main' > /etc/apt/sources.list.d/pgdg.list"
+          sudo apt update -y -qq --fix-missing
+          sudo apt -y install postgresql-client-15 postgresql-15 postgresql-server-dev-15
+          sudo apt -y autoremove && sudo apt -y clean
+          sudo chmod a+rwx `/usr/lib/postgresql/15/bin/pg_config --pkglibdir` `/usr/lib/postgresql/15/bin/pg_config --sharedir`/extension /var/run/postgresql/
 
-    - run: cargo install --locked cargo-pgrx --version 0.16.1
-    - run: cargo pgrx init --pg15 /usr/lib/postgresql/15/bin/pg_config
+      - run: cargo install --locked cargo-pgrx --version 0.16.1
+      - run: cargo pgrx init --pg15 /usr/lib/postgresql/15/bin/pg_config
 
-    - name: Format code
-      run: |
-        cd supabase-wrappers && cargo fmt --check
+      - name: Format code
+        run: |
+          cd supabase-wrappers && cargo fmt --check
 
-    - name: Run clippy
-      run: |
-        cd supabase-wrappers && RUSTFLAGS="-D warnings" cargo clippy --all --tests --no-deps
+      - name: Run clippy
+        run: |
+          cd supabase-wrappers && RUSTFLAGS="-D warnings" cargo clippy --all --tests --no-deps
 
-    - run: cd supabase-wrappers && cargo test
+      - run: cd supabase-wrappers && cargo test
