--- a/wasm-wrappers/fdw/openapi_fdw/Cargo.toml
+++ b/wasm-wrappers/fdw/openapi_fdw/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "openapi_fdw"
-version = "0.1.4"
+version = "0.2.0"
 edition = { workspace = true }
 rust-version = { workspace = true }
 homepage = { workspace = true }
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 wit-bindgen-rt = "0.41.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+serde_yaml_ng = "0.10"
 urlencoding = "2.1"
 
 [package.metadata.component]
